--- a/Ejercisio1.html
+++ b/Ejercisio1.html
@@ -9,36 +9,43 @@
 </head>
 <body>
     <div class="container">
-    <div class="row justify-content-center">
+     <div class="row justify-content-center">
         <!-- Header -->
-        <div class="col-12 col-md-4 col-sm-6" style="background-color:#FF0000;">
-            <strong> LogoEmpresa </strong>
-        </div>
-        <div class="col-12 col-md-8 col-sm-6" style="background-color:yellow;">
-            <strong> Menú de navegación </strong>
-        </div>
+        <p class="col-12 col-md-12 col-sm-12 bg-dark text-center  p-2">
+            <strong class="bg-warning d-inline justify-content-center align-item-centere"> LogoEmpresa </strong>
+        </p>
+       
         
         <!-- Body -->
-        <div class="col-12 col-md-12 col-sm-12 " style="background-color: gray; padding: 8rem;">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. At deserunt, dignissimos ipsum doloribus aut molestias amet, dolores doloremque totam quis perferendis quibusdam dolorem numquam odit eum. Numquam minus ducimus quidem.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit iste quod cumque enim, vero cum perferendis quia voluptatum ipsum error non fugit itaque adipisci consequatur quos quis debitis est culpa?
+        <div class="col-12 col-md-12 col-sm-12 bg-warning text-center py-5 " >
+            <h5 class=" d-flex justify-content-center align-item-center">Lorem ipsum dolor</h5>
+            <p class="text-center">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit  consectetur adipisicing e . 
+            </p>
+                <p class="bg-dark text-light d-inline justify-content-center align-item-centere p-1">Contacto</p>
         </div>
 
         <!-- Footer -->
-        <div class="col-12 col-md-4 col-sm-6" style="background-color:rgb(56, 241, 56);">
+        <div class="col-12 col-md-4 col-sm-6 bg-light" >
             <h4>Título 1</h4>
+            <img class="img-fluid" src="imagen.png" />
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, et? Commodi eum quae cupiditate aut aliquam earum vero corrupti reprehenderit accusamus repellendus delectus, odio optio deserunt architecto, facilis at nesciunt.
-               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero maiores atque exercitationem deleniti. Quae nisi unde deleniti earum, deserunt voluptas quo. Neque explicabo eum sed corrupti perspiciatis, odio dolorum nostrum? 
+               Lorem ipsum dolor, sit ametum, deserunt voluptas quo. Neque explicabo eum sed corrupti perspiciatis, odio dolorum nostrum? 
             </p>
         </div>
-        <div class="col-12 col-md-4 col-sm-6" style="background-color:rgb(52, 190, 236);">
+        <div class="col-12 col-md-4 col-sm-6 bg-light">
             <h4>Título 1</h4>
+            <img class="img-fluid" src="imagen.png" />
             <p>Commodo dolore duis tempor nisi occaecat laboris non non. Id qui aliquip excepteur aute minim in officia cupidatat ad. Irure amet consectetur aute amet. Ex excepteur esse pariatur in id magna officia reprehenderit ex ipsum enim aliquip. 
-               Veniam consequat excepteur dolore enim veniam cupidatat. Laborum elit enim culpa consequat consectetur aute proident aliqua nisi eiusmod amet reprehenderit.</p>
+                dolore enim veniam cupidatat. Laborum elit enim culpa consequat consectetur aute proident aliqua nisi eiusmod amet reprehenderit.</p>
         </div>
-        <div class="col-12 col-md-4 col-sm-12" style="background-color:rgb(56, 241, 56);">
+        <div class="col-12 col-md-4 col-sm-12 bg-light">
             <h4>Título 1</h4>
+            <img class="img-fluid" src="imagen.png" />
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos qui explicabo quisquam similique voluptates! Officia, iure voluptates nam voluptatum sint ducimus qui recusandae eius, fugiat sit ipsam maiores possimus accusantium?</p>
+        </div>
+        <div class="col-12 col-md-12 col-sm-12 bg-dark p-2">
+            <p class="text-light text-center">Derechos Reservados</p>
         </div>
     </div>
 </div>
