--- a/Ejercisio1.html
+++ b/Ejercisio1.html
@@ -26,20 +26,20 @@
         </div>
 
         <!-- Footer -->
-        <div class="col-12 col-md-4 col-sm-6 bg-light row g-2" >
+        <div class="col-12 col-md-4 col-sm-6 bg-light" >
             <h4>Título 1</h4>
             <img class="img-fluid" src="imagen.png" />
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, et? Commodi eum quae cupiditate aut aliquam earum vero corrupti reprehenderit accusamus repellendus delectus, odio optio deserunt architecto, facilis at nesciunt.
                Lorem ipsum dolor, sit ametum, deserunt voluptas quo. Neque explicabo eum sed corrupti perspiciatis, odio dolorum nostrum? 
             </p>
         </div>
-        <div class="col-12 col-md-4 col-sm-6 bg-light row g-2">
+        <div class="col-12 col-md-4 col-sm-6 bg-light">
             <h4>Título 1</h4>
             <img class="img-fluid" src="imagen.png" />
             <p>Commodo dolore duis tempor nisi occaecat laboris non non. Id qui aliquip excepteur aute minim in officia cupidatat ad. Irure amet consectetur aute amet. Ex excepteur esse pariatur in id magna officia reprehenderit ex ipsum enim aliquip. 
                 dolore enim veniam cupidatat. Laborum elit enim culpa consequat consectetur aute proident aliqua nisi eiusmod amet reprehenderit.</p>
         </div>
-        <div class="col-12 col-md-4 col-sm-12 bg-light row g-2">
+        <div class="col-12 col-md-4 col-sm-12 bg-light">
             <h4>Título 1</h4>
             <img class="img-fluid" src="imagen.png" />
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos qui explicabo quisquam similique voluptates! Officia, iure voluptates nam voluptatum sint ducimus qui recusandae eius, fugiat sit ipsam maiores possimus accusantium?</p>
